OOP/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-service.jar:/home/cmis/APCS-lydia1798-cmis/OOP
-d
/home/cmis/APCS-lydia1798-cmis/OOP/doc
-encoding
UTF-8
-charset
UTF-8
/home/cmis/APCS-lydia1798-cmis/OOP/password.java
<---- end of javadoc command ---->
Loading source file /home/cmis/APCS-lydia1798-cmis/OOP/password.java...
/home/cmis/APCS-lydia1798-cmis/OOP/password.java:11: error: ')' expected
        else if(length(passwordInput) == true && nonalphaChar(passwordInput == true){
                                                                                    ^
/home/cmis/APCS-lydia1798-cmis/OOP/password.java:15: error: ';' expected
            truee = falsek
                          ^
2 errors
